# SiWiR_ex4

./: .gitignore  CMakeLists.txt  Makefile  README  grid.hpp  heat.cpp  startup.sh  util.hpp  vtk.hpp
CMake_example/hello/: CMakeLists.txt
data/: plot.py
vtk_example/vtk/vtk/: time_step_0.pvtu
